#30 [1.5h] implemented vacation mode, fixed PMD warnings