@@ -1,6 +1,8 @@
 package at.jku.se.smarthome.service;
 
 import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.LocalTime;
 
 import org.junit.After;
 import static org.junit.Assert.assertEquals;
@@ -120,7 +122,7 @@ public class TestMockVacationModeService {
         LocalDate start = LocalDate.of(2026, 4, 20);
         LocalDate end = LocalDate.of(2026, 4, 25);
         service.activateVacationMode(start, end, selectedSchedule, "Owner");
-        assertTrue(service.getStatusSummary().contains("Active from 2026-04-20 to 2026-04-25 using 'Morning Lights'"));
+        assertTrue(service.getStatusSummary().contains("Active from 2026-04-20 00:00 to 2026-04-25 23:59 using 'Morning Lights'"));
     }
 
     /**
@@ -144,7 +146,7 @@ public class TestMockVacationModeService {
         LocalDate start = LocalDate.of(2026, 4, 20);
         LocalDate end = LocalDate.of(2026, 4, 25);
         service.activateVacationMode(start, end, selectedSchedule, "Owner");
-        assertTrue(notificationService.getNotifications().get(0).getMessage().contains("Vacation mode enabled"));
+        assertTrue(notificationService.getNotifications().getFirst().getMessage().contains("Vacation mode enabled"));
     }
 
     /**
@@ -156,7 +158,7 @@ public class TestMockVacationModeService {
         LocalDate start = LocalDate.of(2026, 4, 20);
         LocalDate end = LocalDate.of(2026, 4, 25);
         service.activateVacationMode(start, end, selectedSchedule, "Owner");
-        assertTrue(logService.getLogs().get(0).getAction().contains("Vacation mode enabled"));
+        assertTrue(logService.getLogs().getFirst().getAction().contains("Vacation mode enabled"));
     }
 
     /**
@@ -200,6 +202,73 @@ public class TestMockVacationModeService {
         Schedule selectedSchedule = scheduleService.getScheduleById("sched-001");
         service.activateVacationMode(LocalDate.of(2026, 4, 20), LocalDate.of(2026, 4, 25), selectedSchedule, "Owner");
         service.clearIfUsingSchedule(selectedSchedule.getId(), "Removed selected schedule");
-        assertEquals(NotificationType.WARNING, notificationService.getNotifications().get(0).getType());
+        assertEquals(NotificationType.WARNING, notificationService.getNotifications().getFirst().getType());
+    }
+
+    /**
+     * Test: selected vacation schedule is locked while vacation mode is enabled.
+     */
+    @Test
+    public void isSelectedScheduleLockedReturnsTrueForConfiguredSchedule() {
+        Schedule selectedSchedule = scheduleService.getScheduleById("sched-001");
+        service.activateVacationMode(LocalDate.now(), LocalDate.now().plusDays(1), selectedSchedule, "Owner");
+        assertTrue(service.isSelectedScheduleLocked(selectedSchedule.getId()));
+    }
+
+    /**
+     * Test: can execute schedule returns false for non-selected schedule during active vacation dates.
+     */
+    @Test
+    public void canExecuteScheduleReturnsFalseForNonSelectedScheduleWhenActive() {
+        Schedule selectedSchedule = scheduleService.getScheduleById("sched-001");
+        Schedule otherSchedule = scheduleService.getScheduleById("sched-002");
+        service.activateVacationMode(LocalDate.now(), LocalDate.now().plusDays(1), selectedSchedule, "Owner");
+        assertFalse(service.canExecuteSchedule(otherSchedule.getId(), LocalDate.now()));
+    }
+
+    /**
+     * Test: lock message includes selected schedule name.
+     */
+    @Test
+    public void lockedScheduleDeletionMessageContainsScheduleName() {
+        String message = service.getLockedScheduleDeletionMessage("Morning Lights");
+        assertTrue(message.contains("Morning Lights"));
+    }
+
+    /**
+     * Test: lock message guides user to deactivate vacation mode first.
+     */
+    @Test
+    public void lockedScheduleDeletionMessageContainsGuidance() {
+        String message = service.getLockedScheduleDeletionMessage("Morning Lights");
+        assertTrue(message.contains("Deactivate vacation mode first"));
+    }
+
+    /**
+     * Test: hour-based activation is active within configured time window.
+     */
+    @Test
+    public void activateVacationModeWithHoursIsActiveInsideWindow() {
+        activateVacationForSingleDayWithHours();
+        assertTrue(service.isActiveOn(LocalDateTime.of(2026, 4, 20, 12, 0)));
+    }
+
+    /**
+     * Test: hour-based activation is inactive before configured time window.
+     */
+    @Test
+    public void activateVacationModeWithHoursIsInactiveBeforeWindow() {
+        activateVacationForSingleDayWithHours();
+        assertFalse(service.isActiveOn(LocalDateTime.of(2026, 4, 20, 7, 59)));
+    }
+
+    /**
+     * Activates vacation mode for one day with business hours.
+     */
+    private void activateVacationForSingleDayWithHours() {
+        Schedule selectedSchedule = scheduleService.getScheduleById("sched-001");
+        LocalDate start = LocalDate.of(2026, 4, 20);
+        LocalDate end = LocalDate.of(2026, 4, 20);
+        service.activateVacationMode(start, end, LocalTime.of(8, 0), LocalTime.of(18, 0), selectedSchedule, "Owner");
     }
 }
